Added some basic functions for roles
